--- a/src/components/hero-section/hero-section.style.css
+++ b/src/components/hero-section/hero-section.style.css
@@ -1,3 +1,7 @@
+.hero-section {
+  overflow-x: hidden;
+}
+
 .hero-title {
   text-align: center;
   margin-top: 103px;
@@ -12,7 +16,7 @@
 }
 .hero-title p {
   font-size: 18px;
-  color: var(--clr-gray);
+  color: var(--clr-light-gray-500);
 }
 .hero-img {
   height: 464px;
