--- a/src/components/hero-section/hero-section.style.css
+++ b/src/components/hero-section/hero-section.style.css
@@ -25,3 +25,24 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+@media (width > 768px) {
+  .hero-title {
+    margin-top: 86px;
+    padding: 8px 10%;
+    margin-bottom: 59px;
+  }
+  .hero-title h1 {
+    font-size: 3rem;
+    letter-spacing: 4rem;
+    margin-right: -4rem;
+    margin-bottom: 32px;
+  }
+  .hero-title p {
+    font-size: 24px;
+  }
+  .hero-img {
+    height: 580px;
+    background-size: cover;
+  }
+}
