--- a/src/components/catalog/catalog.style.css
+++ b/src/components/catalog/catalog.style.css
@@ -53,6 +53,7 @@
   }
   .catalog-section ul {
     font-size: 20px;
+    padding-bottom: 8px;
   }
   .catalog-section ul li:hover {
     cursor: pointer;
