catalog-page header, sorting control and select - mobile UI

--- a/src/components/common/select/select.style.css
+++ b/src/components/common/select/select.style.css
@@ -10,5 +10,13 @@
 }
 select option {
   color: var(--clr-gray);
+}
+select {
   cursor: pointer;
+}
+
+@media (width > 768px) {
+  select option {
+    font-size: 24px;
+  }
 }
