--- a/src/components/catalog-page/header/page-header.style.css
+++ b/src/components/catalog-page/header/page-header.style.css
@@ -4,3 +4,11 @@
   font-size: 32px;
   font-weight: 500;
 }
+
+@media (width > 768px) {
+  .page-header {
+    padding: 44px 60px 12px 60px;
+    font-size: 46px;
+    font-weight: 600;
+  }
+}
