--- a/src/components/catalog-page/sorting-control/sorting-control.style.css
+++ b/src/components/catalog-page/sorting-control/sorting-control.style.css
@@ -6,3 +6,10 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media (width > 768px) {
+  .sorting-control-container {
+    padding: 12px 60px;
+    font-size: 24px;
+  }
+}
