product regular price - mobile UI

--- a/src/components/catalog-page/products/product-card/product-card.style.css
+++ b/src/components/catalog-page/products/product-card/product-card.style.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   max-width: 157px;
-  max-height: 201px;
+  max-height: 251px;
   text-align: center;
 }
 .product-card > img {
@@ -17,4 +17,10 @@
 }
 .product-price {
   font-size: 14px;
+}
+.product-regular-price {
+  position: relative;
+  color: var(--clr-light-gray-500);
+  text-decoration: line-through;
+  text-decoration-color: red;
 }
