--- a/src/components/catalog-page/products/product-card/product-card.style.css
+++ b/src/components/catalog-page/products/product-card/product-card.style.css
@@ -6,6 +6,7 @@
   max-width: 157px;
   max-height: 251px;
   text-align: center;
+  cursor: pointer;
 }
 .product-card > img {
   width: 157px;
@@ -20,7 +21,32 @@
 }
 .product-regular-price {
   position: relative;
+  font-size: 14px;
   color: var(--clr-light-gray-500);
   text-decoration: line-through;
   text-decoration-color: red;
+}
+
+@media (width > 768px) {
+  .product-card {
+    max-width: 427px;
+    max-height: 521px;
+  }
+  .product-card > img {
+    width: 427px;
+    height: 427px;
+  }
+  .product-title {
+    font-size: 18px;
+  }
+  .product-price {
+    font-size: 24px;
+  }
+  .product-regular-price {
+    font-size: 24px;
+  }
+  .product-card:hover {
+    scale: 1.1;
+    transition: ease-in-out 300ms;
+  }
 }
