--- a/src/components/cart-page/cart-card/cart-card.style.css
+++ b/src/components/cart-page/cart-card/cart-card.style.css
@@ -1,11 +1,11 @@
 .cart-card-container {
 	display: grid;
-	grid-template-columns: 123px 1fr;
+	grid-template-columns: 80px 1fr;
 	gap: 10px;
 }
 .cart-card-container > img {
-	width: 123px;
-	height: 143px;
+	width: 80px;
+	height: 100px;
 }
 .cart-card-title {
 	font-size: 14px;
@@ -38,6 +38,8 @@
 	margin-block: auto;
 }
 .product-amount {
+	display: flex;
+	align-items: center;
 	font-weight: 700;
 }
 .product-amount > span {
@@ -56,7 +58,8 @@
 		display: grid;
 		grid-template-columns: 183px 1fr;
 		gap: 20px;
-		width: 601px;
+		width: 100%;
+		max-width: 601px;
 		height: 203px;
 	}
 	.cart-card-container > img {
