input width in cart 100% for mobile devices, subscribe option for mobile devices in footer

--- a/src/components/common/footer/footer.style.css
+++ b/src/components/common/footer/footer.style.css
@@ -1,23 +1,26 @@
 footer {
-  background-color: var(--clr-primary);
-  color: var(--clr-white);
+	background-color: var(--clr-primary);
+	color: var(--clr-white);
+	display: flex;
+	flex-direction: column-reverse;
 }
 
 .footer-sections-container {
-  display: flex;
-  align-items: start;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	align-items: start;
+	justify-content: space-between;
 }
 
 @media (width > 768px) {
-  footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 60px;
-  }
-  .footer-sections-container {
-    max-width: 662px;
-    justify-content: start;
-    gap: 121px;
-  }
+	footer {
+		flex-direction: row;
+		justify-content: space-between;
+		padding: 0 60px;
+	}
+	.footer-sections-container {
+		max-width: 662px;
+		justify-content: start;
+		gap: 121px;
+	}
 }
