--- a/src/components/common/subscribe/subscribe.style.css
+++ b/src/components/common/subscribe/subscribe.style.css
@@ -1,16 +1,19 @@
 .subscribe-form {
-  display: none;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	padding: 36px 20px 0 20px;
 }
 
 @media (width > 768px) {
-  .subscribe-form {
-    padding: 36px 0;
-    display: flex;
-    align-items: start;
-    gap: 16px;
-  }
+	.subscribe-form {
+		padding: 36px 0;
+		flex-direction: row;
+		align-items: start;
+		gap: 16px;
+	}
 
-  .subscribe-form button {
-    margin-top: 40px;
-  }
+	.subscribe-form button {
+		margin-top: 40px;
+	}
 }
